--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="icon" href="favicon.ico?" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
 </head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-29VDEMXG00"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-29VDEMXG00');
+</script>
 <body>
     <div id="root">
         <section>
